# channel-f-bluepill

./: README.md
chf-emulator/: Cargo.toml
chf-emulator/roms/: place_roms_here.txt
chf-emulator/src/: lib.rs
desktop/: Cargo.toml
desktop/src/: main.rs
docs/: schematic.sch
gen-test-bin/: Cargo.toml
gen-test-bin/src/: main.rs
main/: Cargo.toml
main/src/: main.rs
video/: Cargo.toml
video/src/: main.rs
video/src/spi_slave/: mod.rs
video/src/video/: mod.rs
