[package]
name = "desktop"
version = "0.1.0"
authors = ["bjoern <bjoern.quentin@mobile-j.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.19.1"
rodio = "0.13.0"
chf-emulator = { path = "../chf-emulator" }
