[package]
name = "video"
version = "0.1.0"
authors = ["bjoern <bjoern.quentin@mobile-j.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.13"
stm32f1xx-hal = { version = "0.6.1", features = ["rt", "stm32f103", "medium"] }
embedded-hal = "0.2.4"
rtt-target =  { version = "0.2.2", features = ["cortex-m"] }
panic-halt = "0.2.0"
nb = "1.0.0"